# semantic-weight

./: .gitignore  MATS25.ipynb  README.md  curriculum_experiment.py  experiment.py  notes.md  phase2_stats.csv  phase_experiment.py  pyproject.toml  test_blp.py  transformer_experiment.py  weight_experiment.py
experiments/experiment1/: phase1_stats.csv
experiments/experiment2/: curriculum_training_stats.csv
results/: error.html
